--- a/website/static/mapa/index.html
+++ b/website/static/mapa/index.html
@@ -215,7 +215,7 @@ const app = {}
 
 app.map = (function (thisModule) {
   const requestHistoricUrl = 'https://in-my-district.joaopimentel.com/serverapp_get_historic'
-  const photosDirUrl = 'https://in-my-district.joaopimentel.com/image_server' // folder where all the images are stored
+  const getPhotosUrl = 'https://in-my-district.joaopimentel.com/image_server' // folder where all the images are stored
   const anomaliesUrl = 'https://raw.githubusercontent.com/jfoclpf/in-my-district/main/app/www/json/anomalies.json'
   const mapIconsUrl = 'https://raw.githubusercontent.com/jfoclpf/in-my-district/main/app/www/img/map-icons/'
 
@@ -430,7 +430,7 @@ app.map = (function (thisModule) {
 
       for (var photoIndex = 1; photoIndex <= 4; photoIndex++) {
         if (el['foto' + photoIndex]) {
-          const photoUrl = photosDirUrl + '/' + el['foto' + photoIndex]
+          const photoUrl = getPhotosUrl + '/' + el['foto' + photoIndex]
           htmlInfoContent += `<img class="photo-in-popup" width="200px" src="${photoUrl}">`
         }
       }
